tests/fixtures/invalid/missing-semicolon.wgsl
// Missing semicolon
fn test() {
    var x: f32 = 1.0
    var y: f32 = 2.0;
}
